Saved updates to IntermediatePython_Exercises.ipynb for 2025 training

--- a/day2/IntermediatePython_Exercises.ipynb
+++ b/day2/IntermediatePython_Exercises.ipynb
@@ -7,7 +7,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/lsuhpchelp/loniscworkshop2024/blob/main/day2/IntermediatePython_Exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/lsuhpchelp/loniscworkshop2025/blob/main/day2/IntermediatePython_Exercises.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -17,13 +17,13 @@
       },
       "source": [
         "# **Day 2: Intermediate Python (Exercises)**\n",
-        "### 2024 LONI Scientific Computing Bootcamp\n",
+        "### 2025 LONI Scientific Computing Bootcamp\n",
         "\n",
         "Dr. Jianxiong \"Jason\" Li\n",
         "\n",
         "jasonli3@lsu.edu\n",
         "\n",
-        "Jun 5, 2024"
+        "Jun 3, 2025"
       ]
     },
     {
@@ -275,7 +275,7 @@
       "source": [
         "Rectified Linear Unit (ReLU) is a commonly used activation function in machine learning. The definition is simple:\n",
         "\n",
-        "![P_2_ReLU.png](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/P_2_ReLU.png)\n",
+        "![P_2_ReLU.png](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/P_2_ReLU.png)\n",
         "\n",
         "Here, you are asked to write your own ReLU funcion acting on a data array:\n",
         "\n",
@@ -361,7 +361,7 @@
       "source": [
         "# Load data\n",
         "\n",
-        "txtfile = 'https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/data.txt'\n",
+        "txtfile = 'https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/data.txt'\n",
         "data = np.loadtxt(txtfile,\n",
         "                  skiprows=16,\n",
         "                  usecols={0,1,2},\n",
@@ -456,7 +456,7 @@
         "<br><br>\n",
         "\n",
         "---\n",
-        "## **4. Wave Function Propagation of 1-D Harmonic Oscillator**\n",
+        "## **[BONUS] Wave Function Propagation of 1-D Harmonic Oscillator**\n",
         "---\n",
         "\n",
         "> * The purpose of this exercise it to practice various NumPy array creationg methods, ufuncs, and aggregation functions in a close-to-practical problem.\n",
@@ -473,7 +473,7 @@
         "\n",
         "In quantum mechanics, a particle is not located in a fixed place, instead it has a **probability distribution** of where it may be found, which is defined by a **wave function**. In a quantum-mechanical picture, instead of the particle itself oscillating back and forth, it looks more like its probability distribution (a \"wave packet\", if you will) oscillating back and forth, but in the same way the mass does in the classical picture.\n",
         "\n",
-        "![P_4_scenario.png](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/P_4_scenario.png)\n",
+        "![P_4_scenario.png](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/P_4_scenario.png)\n",
         "\n",
         "\n",
         "Here, you are asked to write a simple code to study how the wave function of a 1-D harmonic oscillator propagates using quantum mechanical methods.\n",
@@ -496,7 +496,7 @@
         "\n",
         "Then create the initial wave function on the above grid, which should look like:\n",
         "\n",
-        "![P_4_psi.png](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/P_4_psi.png)\n",
+        "![P_4_psi.png](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/P_4_psi.png)\n",
         "\n",
         "The `√C` is the normalization factor."
       ]
@@ -540,7 +540,7 @@
         "\n",
         "The Hamiltonian matrix is core of the dynamics in quantume mechanics. The Hamiltonian matrix is an `(N, N)` matrix (NumPy array), which can be defined this way:\n",
         "\n",
-        "![P_4_H.png](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/P_4_H.png)\n",
+        "![P_4_H.png](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/P_4_H.png)\n",
         "\n",
         "Basically, matrix `T` (kinetic energy) is a tridiagonal matrix, with all diagonal elements being `-2` and off-diagonal elements being `1`, then times a constant `-1/dx^2`. Matrix `V` (potential energy) is a diagonal matrix, with each element is the potential energy `V(x)=x^2/2` at the corresponding coordinate. All other unwritten elements are `0`."
       ]
@@ -580,7 +580,7 @@
         "\n",
         "Based on the Hamiltonian matrix, we will now build the propagator, a matrix you actually multiple to the left of the wave function. The propagator is defined like this:\n",
         "\n",
-        "![P_4_CN.png](https://github.com/lsuhpchelp/loniscworkshop2024/raw/main/day2/images/P_4_CN.png)\n",
+        "![P_4_CN.png](https://github.com/lsuhpchelp/loniscworkshop2025/raw/main/day2/images/P_4_CN.png)\n",
         "\n",
         "Where `I` is the `(N, N)` identity matrix, `i` is the imaginary unit, and `dt` is the time step length. Here we will let time goes from `0` to `4*pi`, and a total of `Nt=20,000` steps, so that step length is short enough. Notice that there is a matrix inverse and a matrix multiplications!\n",
         "\n",
