--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -208,7 +208,7 @@
         "\n",
         "---\n",
         "\n",
-        "        print(arguments)"
+        "          print(arguments)"
       ],
       "metadata": {
         "id": "wKgL5oQY8VOH"
@@ -405,7 +405,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "A variable's name references or points to an object. Each object can have various data types with some stored values. No particular type is used upon variable declaration."
+        "Variables are used to store data values that can be referenced and manipulated later in a program. A variable is created when you assign it a value using assignemnt operator (=). No particular type is used upon variable declaration.You do not need to declare the variable type explicitly like in other programming languages, Python determines that authomatically based on the datatype that being assignd to it. A variable's name references or points to an object. Each object can have various data types with some stored values."
       ],
       "metadata": {
         "id": "iruemVSmE-fn"
@@ -417,7 +417,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myVariableName = value"
+        "          myVariable = value"
       ],
       "metadata": {
         "id": "QmHae8n69CUG"
@@ -691,7 +691,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "       del myVariable"
+        "          del myVariable"
       ],
       "metadata": {
         "id": "MOiX2aEGGDYS"
@@ -716,7 +716,7 @@
         "myTenthVariable = 65\n",
         "\n",
         "print (myTenthVariable)\n",
-        "del myTenthVariable\n"
+        "del myTenthVariable"
       ],
       "metadata": {
         "id": "lRo1hsnza_fH"
@@ -754,7 +754,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "The datatype of a variable is determined at runtime in Python. It supports many built-in data types and allows you to create your own data type using classes. One can use the *type()* function to determine the data type of a variable."
+        "Data types define the kind of values a variable can hold. The datatype of a variable is determined at runtime in Python. It supports many built-in data types, including numeric types like int, float, and complex for numbers; sequence types like str, list, and tuple for ordered collections; mapping type like dictionary or dict for key-value pairs; and set types like set and frozenset for unordered collections of unique elements. There are also Boolean type, bool, and NoneType for the absence of a value. Python allows you to create your own data type using classes. Understanding data types is essential for writing correct and efficient Python code, as different operations and methods apply to different types."
       ],
       "metadata": {
         "id": "Y7yT1GbLGoIB"
@@ -766,26 +766,10 @@
         "Note\n",
         "\n",
         "---\n",
-        "Numeric Types:\t*int, float, complex*\n",
-        "\n",
-        "Text Type: *str*\n",
-        "\n",
-        "Boolean Type:\t*bool*\n",
-        "\n",
-        "Sequence Types:\t*list, tuple, range*\n",
-        "\n",
-        "Mapping Type:\t*dict*\n",
-        "\n",
-        "Set Types:\t*set, frozenset*\n",
-        "\n",
-        "Binary Types:\t*bytes, bytearray, memoryview*\n",
-        "\n",
-        "None Type:\t*None*\n",
-        "\n",
-        "---"
+        "The five primitive data types are *int, float, str, bool, and NoneType*. All other are types are non-primitive, including *lists, tuples, dictionary, set, file*, and etc. Python uses classes to define its data types, including its primitive types. These types are the foundation of all data structures and expressions in Python, and they are immutable, meaning that their values can not be changed after they are created."
       ],
       "metadata": {
-        "id": "vZjpDP7dYq5-"
+        "id": "uhSo93D6R-M6"
       }
     },
     {
@@ -794,7 +778,38 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        type(myVariable)"
+        "* Numeric Types:\t*int, float, complex*\n",
+        "* Text Type: *str*\n",
+        "* Boolean Type:\t*bool*\n",
+        "* Sequence Types:\t*list, tuple, range*\n",
+        "* Mapping Type:\t*dict*\n",
+        "* Set Types:\t*set, frozenset*\n",
+        "* Binary Types:\t*bytes, bytearray, memoryview*\n",
+        "* None Type:\t*None*"
+      ],
+      "metadata": {
+        "id": "vZjpDP7dYq5-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "One can use the *type()* function to determine the data type of a variable."
+      ],
+      "metadata": {
+        "id": "OjBePD9i_H8X"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          type(myVariable)"
       ],
       "metadata": {
         "id": "00iSRq4O9aSz"
@@ -863,18 +878,6 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note\n",
-        "\n",
-        "---\n",
-        "The four primitive data types are *integer, float, string*, and *boolean*. All other are types are non-primitive, including *lists, tuples, dictionary, set, file*, and etc. Python uses classes to define its data types, including its primitive types."
-      ],
-      "metadata": {
-        "id": "uhSo93D6R-M6"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "1.5 Literals\n",
         "---"
       ],
@@ -913,6 +916,19 @@
       ],
       "metadata": {
         "id": "wGU9gSJucIQl"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "\n",
+        "          myVariable = literal"
+      ],
+      "metadata": {
+        "id": "GUESbZptBw5H"
       }
     },
     {
@@ -998,7 +1014,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "Primary numeric data types in Python are integers, floating-point numbers, and complex numbers. Integers are whole numbers, no decimal point, no fractional part. They can be positive, nagative, or zero. They also have arbitrary precision, htey can grow as large as memory allows. Floating-point numbers are eal numbers with decimals, fractional parts. They follow the IEEE 754 double-precision standard. Precision is limited about 15-17 decimal digits. Complex numbers represent numbers with real and imaginary part. The imaginary unit is written as j. These numbers are mostly used in mathimatical, engineering, and physical contexts."
+        "Primary numeric data types in Python are integers, floating-point numbers, and complex numbers. Integers are whole numbers, no decimal point, no fractional part. They can be positive, nagative, or zero. They also have arbitrary precision, htey can grow as large as memory allows. Floating-point numbers are eal numbers with decimals, fractional parts. They follow the IEEE 754 (IEEE Standard for Floating-Point Arithmetic. IEEE STD 754-2019 pp. 1–84. ISBN 978-1-5044-5924-2) double-precision standard. Precision is limited about 15-17 decimal digits. Complex numbers represent numbers with real and imaginary part. The imaginary unit is written as j. These numbers are mostly used in mathimatical, engineering, and physical contexts."
       ],
       "metadata": {
         "id": "Wuyia5FYHhu-"
@@ -1010,7 +1026,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myVariable = numeric datatype"
+        "          myVariable = numeric datatype"
       ],
       "metadata": {
         "id": "jutNzWei-Ai4"
@@ -1184,7 +1200,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myVariable = function(VariableName)"
+        "          myVariable = function(VariableName)"
       ],
       "metadata": {
         "id": "ZexMWVWl_1e5"
@@ -1287,7 +1303,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "      myVariable = Boolean value"
+        "          myVariable = Boolean value"
       ],
       "metadata": {
         "id": "ivGLT7RIIvd4"
@@ -1381,6 +1397,19 @@
       ],
       "metadata": {
         "id": "uzTJv6kgCiM3"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "\n",
+        "          myString = \"Lorem ...\""
+      ],
+      "metadata": {
+        "id": "zKmrBz0y827D"
       }
     },
     {
@@ -1555,7 +1584,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myString[index]"
+        "          myString[index]"
       ],
       "metadata": {
         "id": "9Z64MPuDJYdp"
@@ -1628,7 +1657,7 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "        myString[start index: end index]"
+        "          myString[start index: end index: step]"
       ],
       "metadata": {
         "id": "0ikq0NeqJ6N3"
@@ -1693,6 +1722,22 @@
       ],
       "metadata": {
         "id": "ZdeQGULSKOsr"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "* Convert to uppercase: str.upper()\n",
+        "* Convert to lowercase: str.lower()\n",
+        "* Remove leading/trailing whitespace: str.strip()\n",
+        "* Replaces a string with another string: str.replace(\"old\",\"new\")\n",
+        "* Splits string into a list: str.split(\"separator\")"
+      ],
+      "metadata": {
+        "id": "I2iLOQqg7xk1"
       }
     },
     {
@@ -1814,6 +1859,22 @@
       ],
       "metadata": {
         "id": "JmC6zZoTKjn-"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "* Concatenation: str1 + str2\n",
+        "* Repitition:    str  * n\n",
+        "* Accessing characters: str[index]\n",
+        "* Slicing string: str[start:end]\n",
+        "* Membership: 'value' in str"
+      ],
+      "metadata": {
+        "id": "xq1bmJ-F6z87"
       }
     },
     {
@@ -2746,12 +2807,6 @@
       "cell_type": "markdown",
       "source": [
         "2.4 Bitwise operators\n",
-        "---\n",
-        "\n",
-        "You can use bitwise operators to perform Boolean logic on individual bits. It is very similar to using logical operators such as *and*, *or*, and *not*.\n",
-        "\n",
-        "You can evaluate Boolean expressions with bitwise operators instead of logical operators.\n",
-        "\n",
         "---"
       ],
       "metadata": {
@@ -2761,7 +2816,37 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Description\n",
+        "\n",
+        "---\n",
+        "You can use bitwise operators to perform Boolean logic on individual bits. It is very similar to using logical operators such as *and* (&), *or* (|), *xor* (^), and *not* (~). You can evaluate Boolean expressions with bitwise operators instead of logical operators. Bitwise operators work at the binary level and are commonly used in low-level programming, such as working with flags, masks, or hardware interfaces. Both a and b should be integers."
+      ],
+      "metadata": {
+        "id": "DDIfCctz5sOc"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "\n",
+        "* AND: a & b\n",
+        "* OR:  a | b\n",
+        "* XOR: a ^ b\n",
+        "* NOT: ~a\n",
+        "* Left shift: a << n\n",
+        "* Right shift: a >> n"
+      ],
+      "metadata": {
+        "id": "C6YLb55L4_IK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
