--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -2708,7 +2708,7 @@
         "Description\n",
         "\n",
         "---\n",
-        "Logical operators are used to perform Boolean algebra and combine multiple conditional expressions. These operators return a Boolen result, True or False, based on the logical relationship between the expressions they are evaluating. The three main logical operators are and (&), or (|), and not (!). The and operator returns True only if both conditions are True. The or operator returns True if atleast one condition is True. The not operator inverts the result of a condition that returns True if the condition is False. These operators are often used in conditional statements to build more complex decision making logic."
+        "Logical operators are used to perform Boolean algebra and combine multiple conditional expressions. These operators return a Boolean result, True or False, based on the logical relationship between the expressions they are evaluating. The three main logical operators are AND (&), OR (|), and NOT (!). The and operator returns True only if both conditions are True. The OR operator returns True if atleast one condition is True. The NOT operator inverts the result of a condition that returns True if the condition is False. These operators are often used in conditional statements to build more complex decision making logic."
       ],
       "metadata": {
         "id": "t3I59w40l0c2"
@@ -2732,11 +2732,11 @@
         "Syntax\n",
         "\n",
         "---\n",
-        "condition1 and condition2\n",
+        "           condition1 AND condition2\n",
         "\n",
-        "condition1 or condition2\n",
+        "           condition1 OR  condition2\n",
         "\n",
-        "not condition\n"
+        "           NOT condition\n"
       ],
       "metadata": {
         "id": "VH53tSaRm5ug"
@@ -2956,12 +2956,10 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Note:\n",
+        "Note\n",
         "\n",
         "---\n",
-        "When you have a number greater than 255, you will need more than 1 byte, max value 255 (in decimal), anything larger than 255 requires more bytes. Each byte can hold value from 0-255.  If you have a large number you can represent it with more than 1 byte. 0-255 - one byte, 256-65535 2 bytes, 65536-16777215 3 bytes etc. 500 -> needs two bytes: 0000000111110100 (9 bits).\n",
-        "\n",
-        "---"
+        "When you have a number greater than 255, you will need more than 1 byte, max value 255 (in decimal), anything larger than 255 requires more bytes. Each byte can hold value from 0-255.  If you have a large number you can represent it with more than 1 byte. 0-255 - one byte, 256-65535 2 bytes, 65536-16777215 3 bytes etc. 500 -> needs two bytes: 0000000111110100 (9 bits)."
       ],
       "metadata": {
         "id": "fGvbQQzcvlrh"
@@ -2971,14 +2969,38 @@
       "cell_type": "markdown",
       "source": [
         "Assignment operators\n",
-        "---\n",
-        "\n",
-        "Bitwise: &=, |=, ^=, >>=, <<=\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "cEYesb7BC1S_"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Bitwise assignment operators combine bitwise operations with assignment, allowing you to modify a variable by applying a bitwise operation directly to it. These operators include bitwise AND and assignment (&=), bitwise OR and assignment (|=), bitwise XOR and assignment (^=), right shift and assignment (>>=), and left shift and assignment (<<=). These operators typically used in low-lewel programming tasks such as working with binary data, flags, or hardware interfaces, where direct manipulatin of bits required.  "
+      ],
+      "metadata": {
+        "id": "VdR6z3aBH-Zk"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "* Bitwise AND and assignment: a &= b\n",
+        "* Bitwise OR and assignment:  a |= b\n",
+        "* Bitwise XOR and assignment: a ^= b\n",
+        "* Bitwise right shift and assignment: a >>= b\n",
+        "* Bitwise left shift and assignment:  a <<= b"
+      ],
+      "metadata": {
+        "id": "9gZgaZM4JI04"
       }
     },
     {
@@ -3076,16 +3098,35 @@
       "cell_type": "markdown",
       "source": [
         "2.5 Identity operators\n",
-        "---\n",
-        "Identity operators are used to compare the memory location or identity of two objects. Unlike comparison operators, the identity operators check whether two objects are the same object in memory.\n",
-        "\n",
-        "*   is\n",
-        "*   is not\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "CRZIby6Oovxw"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Identity operators are used to compare the memory location or identity of two objects. Unlike comparison operators, the identity operators check whether two objects are the same object in memory. There are two identity operators, *is* and *is not*. The *is* operator returns True if two variables point to the same object in memory. The *is not* operator returns True if variables point to different objects. It is important to note that if two variables have equal values, they may not necessarily be the same object. The identity operators should be used when you care about object identity and not just equality."
+      ],
+      "metadata": {
+        "id": "tOz80dX8J-XG"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          x is y\n",
+        "          x is not y"
+      ],
+      "metadata": {
+        "id": "j_HtvtYrKCnj"
       }
     },
     {
@@ -3147,14 +3188,7 @@
       "cell_type": "markdown",
       "source": [
         "2.6 Membership operators\n",
-        "---\n",
-        "Membership operators are used to test whether a value is a member of a sequence. These operators are very useful when you want to check if a certain element exists inside a collection, such as a list, string, or set.\n",
-        "\n",
-        "*   in\n",
-        "*   not in\n",
-        "\n",
-        "---\n",
-        "\n"
+        "---"
       ],
       "metadata": {
         "id": "FEbV2Yyc1Rr-"
@@ -3163,7 +3197,33 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Examples:\n",
+        "Description\n",
+        "\n",
+        "---\n",
+        "Membership operators are used to test whether a value is a member of a sequence. These operators are very useful when you want to check if a certain element exists inside a collection, such as a list, string, or set. There are two membership operators, *in* and *not in*. The *in* operator returns True if the specified value is found in the sequence. The *not in* returns True if the value is not found in the sequence. These operators are commonly used in conditions to check for the presence or absence of elements in the sequence, making code more readable and concise."
+      ],
+      "metadata": {
+        "id": "4rVnXuQILtSK"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          value in sequence\n",
+        "\n",
+        "          value not in sequence"
+      ],
+      "metadata": {
+        "id": "NMUdZdJIMb0B"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
