--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -155,6 +155,53 @@
     {
       "cell_type": "markdown",
       "source": [
+        "Python Version Notice\n",
+        "\n",
+        "---\n",
+        "In this quide, we will be using Python 3.11.12 (main, Apr  9 2025, 08:55:54) [GCC 11.4.0] (e.g., Python 3.12). All examples and syntax are compatible with Python3 and may not work as expected in Python 2. It is recommended to run this code in an environment where Python 3.x is installed, such as Google Colab, Jupyter Notebook, or local Python 3 setup."
+      ],
+      "metadata": {
+        "id": "B9aInqPDdHPI"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "print(sys.version)"
+      ],
+      "metadata": {
+        "id": "h_VtmFPreuEm"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!python3 --version"
+      ],
+      "metadata": {
+        "id": "pH6aR9mwezkF"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Note\n",
+        "\n",
+        "---\n",
+        "In this guide, we will use specific variables for clarity and consistency. The variables *a* and *b* will be used for demonstrating bitwise operations, as they typically involve integer values at the binary level. For all other examples, including arithmetic, comparison, logical, assignment, and string operations, we will be using variables defined according to Camel Case convention like *myVariable*. We may use simple names like *x*, *y*, and *z* for clarity purposes. This helps keep the examples organized and makes it easier to distinguish between general purpose and low-level bitwise operations."
+      ],
+      "metadata": {
+        "id": "5ug1OePhfEmu"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
         "# Section 1: Python programming basics\n",
         "\n",
         "1.1 Print function\n",
@@ -3315,6 +3362,30 @@
       "metadata": {
         "id": "QXf_KtapvWX_"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import sys\n",
+        "print(sys.version)"
+      ],
+      "metadata": {
+        "id": "Ynvb7VxRctoy",
+        "outputId": "3319ca37-e677-408e-b6bf-4623a3851c8b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3.11.12 (main, Apr  9 2025, 08:55:54) [GCC 11.4.0]\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
