--- a/day1/Python101.ipynb
+++ b/day1/Python101.ipynb
@@ -4876,17 +4876,7 @@
       "cell_type": "markdown",
       "source": [
         "3.3 Dictionary\n",
-        "---\n",
-        "A dictionary is an ordered mutable data collection that cannot have key duplicates. The items can be removed, changed, and added. Dictionaries store data using **key:value** pairs enclosed in curly braces. A dictionary key can be an integer, float, string, or boolean. Keys must be unique but the values can be duplicates. Dictionaries are ordered starting from Python version 3.6. The values in the dictionaries are indexed by keys.\n",
-        "\n",
-        "---\n",
-        "Syntax:\n",
-        "\n",
-        "        myDictionary = {key 1: value, key 2: value, ..., key n: value}\n",
-        "\n",
-        "        myDictionary = {key: value}\n",
-        "\n",
-        "        myDictionary = dict()"
+        "---"
       ],
       "metadata": {
         "id": "LrEJ_oZiIq2d"
@@ -4895,14 +4885,62 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Dictionary declaration\n",
-        "---\n",
-        "You can declare or create dictionaries in various ways.\n",
+        "Description\n",
         "\n",
+        "---\n",
+        "A dictionary is a built-in data type used to store data in **key:value** pairs enclosed in curly braces. Each key is separated from its value by a colon (:) and pairs are separated by commas. A dictionary is an ordered mutable data collection that cannot have key duplicates. Keys must be unique and immutable (such as strings, numbers, or tuples), while values can be any data type and can be repeated. The items can be removed, changed, and added. Dictionaries are unordered before Python 3.7. It is now ordered starting from Python version 3.7, they maintain the insertion order. The values in the dictionaries are indexed by keys. They are highly efficient for looking up, adding, or updating data by key making them suitable for labeled or structured data."
+      ],
+      "metadata": {
+        "id": "4CNKxfrQ0CCO"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          myDictionary = {key 1: value, key 2: value, ..., key n: value}\n",
+        "\n",
+        "          myDictionary = {key: value}\n",
+        "\n",
+        "          myDictionary = dict()"
+      ],
+      "metadata": {
+        "id": "NSS30AVR0Ge0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Dictionary declaration\n",
         "---"
       ],
       "metadata": {
         "id": "_KxUXvahMwok"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Dictionary declaration involves creating a set of key-value pairs enclosed within curly braces {}. Each key is followed by a colon (:) and paired with a corresponding value. Multiple key-value pairs are separated by commas. Alternatively, dictionaries can be declared using dict() constructor. This flexible structure allows for fast lookups and eaasy updates based on keys, making dictionaries a powerful tool for managing structured data."
+      ],
+      "metadata": {
+        "id": "3nm5WH5e4IkM"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "eD-uWZGJ5AqH"
       }
     },
     {
@@ -4968,22 +5006,10 @@
         "print(myTestDictionary)"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "gdkmMhxvdj80",
-        "outputId": "4e6a3341-f73a-4999-bdc1-2ef1a52dc44f"
+        "id": "gdkmMhxvdj80"
       },
       "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "{'Occupation': 'Student', 'Name': 'Kirill', 'Age': (21, 22, 23, 24, 99)}\n"
-          ]
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5066,13 +5092,45 @@
       "cell_type": "markdown",
       "source": [
         "Nested dictionary\n",
-        "---\n",
-        "Dictionaries can have a nested structure. This means you can have dictionaries as values in other dictionaries.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "kQrCRuBjiGMb"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Dictionaries can have a nested structure. A nested dictionary is a dictionary where one or more values are themselves dictionaries. This means you can have dictionaries as values in other dictionaries. This allows you to represent more complex, hierarchical structures. Nested dictionaries are especially useful for storing grouped data, such as records in a database or configurations with multiple levels of detail. They offer both flexibility and clarity in organizing data with multiple layers."
+      ],
+      "metadata": {
+        "id": "yjhYNTAG5ho9"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          mydictionary = {key1:{subkey1:value1, subkey2:value2}, key2:{subkey1:value3}}"
+      ],
+      "metadata": {
+        "id": "vu2ecZr56Xws"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "ZRAsgoOe6VmT"
       }
     },
     {
@@ -5110,13 +5168,45 @@
       "cell_type": "markdown",
       "source": [
         "Dictionary methods\n",
-        "---\n",
-        "There are some methods that can be used on dictionaries.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "JSlEagi1xdh0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "There are several built-in methods for dictionaries that allow to efficiently operate and interact with stored data. The get(key) method retrieves the value for a given key, returning None if the key does not exist. The keys() and values methods return views of all the keys and values in the dictionary. The items() method returns a view of the key-value pairs as tuples. The update() method allows you to add key-value pairs or update the existing keys with new values. The pop(key) method removes the specified key and its associated value from the dictionary, returning the value. Other useful methods include clear() to remove all items, copy() to create a shallow copy of the dictionary. These methods provide flexible and powerful ways to manage and work with dictionaries."
+      ],
+      "metadata": {
+        "id": "M63kWIPt7Iup"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          myDictionary.method()"
+      ],
+      "metadata": {
+        "id": "_2R1CGRE8wWy"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "4TyPe1gl8tQT"
       }
     },
     {
@@ -5216,14 +5306,95 @@
       "cell_type": "markdown",
       "source": [
         "Dictionary operations\n",
-        "---\n",
-        "Some basic operations can be performed on dictionaries.\n",
-        "\n",
         "---"
       ],
       "metadata": {
         "id": "j39H9C6p1GHB"
       }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Description\n",
+        "\n",
+        "---\n",
+        "Dictionary operations allow you to perform various tasks, includding adding, updating, accessing, and removing key-value pairs. You can access a value by specifying its key, and update a value by assigning a new value to an existing key. The pop(key) method allows you to remove a key-value pair and return its value. Membership testing with *in* checks if a key exists iin the dictionary. The *del* statement can be used to delete the dictionary. The entire dictionary will be removed from memory, making it inaccessible.  "
+      ],
+      "metadata": {
+        "id": "ouLVU6RY9rgp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Syntax\n",
+        "\n",
+        "---\n",
+        "          See examples below"
+      ],
+      "metadata": {
+        "id": "Bo-Ge0XP_kC0"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
+        "\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "sj_CGrvJ9phK"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Adding a key-value pair\n",
+        "\n",
+        "myFirstDictionary = {\"Occupation\":\"Student\", \"Name\":\"Kirill\", \"Age\":25}\n",
+        "\n",
+        "myFirstDictionary[\"Age\"] = 33\n",
+        "\n",
+        "print(myFirstDictionary)"
+      ],
+      "metadata": {
+        "id": "bdWyylXc_Gck"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Accessing a value by the key\n",
+        "\n",
+        "myFirstDictionary = {\"Occupation\":\"Student\", \"Name\":\"Kirill\", \"Age\":25}\n",
+        "\n",
+        "print(myFirstDictionary[\"Age\"])"
+      ],
+      "metadata": {
+        "id": "WQzY2Dxu_MRd"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Removing an item using pop()\n",
+        "\n",
+        "myFirstDictionary = {\"Occupation\":\"Student\", \"Name\":\"Kirill\", \"Age\":25}\n",
+        "\n",
+        "myFirstDictionary.pop(\"Name\")\n",
+        "\n",
+        "print(myFirstDictionary)"
+      ],
+      "metadata": {
+        "id": "KPxbWEod_XKk"
+      },
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
@@ -5263,12 +5434,21 @@
         "Note\n",
         "\n",
         "---\n",
-        "A Python dictionary can be loaded from a JSON file. JSON stands for JavaScript Object Notation and it is a popular format for storing data on the web. Here is an example of such a file student.json\n",
+        "A Python dictionary can be easily loaded from a JSON file, which is a common and widely used data format for representing strucutred data. JSON, or JavaScript Object Notation, is lightweight, human-readable file that is primarily used for data exchange between a server and a web application. Due to its simplicity and easy of use, Jason is often utilized to store and transmit data in various programming languages. In Python, the json module provides functionality to parse JSON data and convert it into a Python dictionary. Below is an example of a JSON file, student.json, which contains student-related information in JSON format that can be loaded into a Python dictionary for further processing."
+      ],
+      "metadata": {
+        "id": "FRXuwLhXuUmI"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Examples\n",
         "\n",
         "---"
       ],
       "metadata": {
-        "id": "FRXuwLhXuUmI"
+        "id": "eQZt5C9VBGsw"
       }
     },
     {
